[project]
name = "router-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "json-rpc>=1.15.0",
    "passlib>=1.7.4",
    "pydantic>=2.11.3",
    "python-glinet>=0.7.0",
    "pywin32>=310",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.13.0",
]
